--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,67 @@
-.App {
-  text-align: center;
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.card {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: start;
+  gap: 10px;
+  border: 10px solid black;
+  border-radius: 8px;
+  padding: 16px;
+  width: 350px;
+  height: 200px;
+  margin-left: 25px;
+  margin-bottom: 25px;
+  margin-top: 20px;
+}
+/* .product-list{
+  display:flex;
+} */
+
+.card img {
+  max-width: 100%;
+  height: auto;
+  margin-bottom: 8px;
 }
 
-.App-link {
-  color: #61dafb;
+.card h3 {
+  font-size: 18px;
+  margin-bottom: 8px;
+}
+/* .button{
+
+} */
+.star {
+  font-size: 24px;
+  color: #ddd;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* .star.starred {
+  color: gold;
+} */
+
+.card button{
+  background-color: white;
+  border-color: white;
+  border: none;
 }
+
+.star.star--grey {
+  color:gray;
+} 
+
+.star.star--yellow {
+  color:#ffc107;
+} 
